<resources>
    <string name="app_name">VideoCallSample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mute_audio">Mute Audio</string>
    <string name="btn_leave_room">Leave</string>
    <string name="mute_video">Mute Video</string>
    <string name="et_room_name">Room Name</string>
    <string name="et_user_name">User Name</string>
    <string name="btn_join_room">Join</string>
    <string name="tv_join_room">JOIN ROOM</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
</resources>