<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewJoinRoomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/tv_join_room" />

    <EditText
        android:id="@+id/et_room_name"
        android:hint="@string/et_room_name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/textViewJoinRoomLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/et_user_name"
        android:hint="@string/et_user_name"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/et_room_name"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_join_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_user_name"
        android:layout_marginTop="25dp"
        android:text="@string/btn_join_room" />

</RelativeLayout>